webboard-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webboard-service
spec:
  selector:
    app: webboard
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
