webboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webboard-ingress
spec:
  rules:
  - host: webboard.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webboard-service
            port:
              number: 80
